<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:background="@drawable/bottom_layout_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:gravity="center"
                android:id="@+id/card_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/bottom_bar_counter"
                android:text="0"
                />
            <LinearLayout

                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <androidx.appcompat.widget.AppCompatButton

                    android:layout_weight="1"
                    style="@style/bottomButton"
                    android:drawableTop="@drawable/ic_clear"
                    android:text="@string/title_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_weight="1"
                    style="@style/bottomButton"
                    android:drawableTop="@drawable/ic_ts"
                    android:layout_marginStart="5dp"
                    android:text="@string/title_turboservice"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:drawableTop="@drawable/ic_share"
                    android:layout_weight="1"
                    style="@style/bottomButton"
                    android:layout_marginStart="5dp"
                    android:text="@string/title_share"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" />

            </LinearLayout>
    </LinearLayout>

</layout>